# libtjson

./: CMakeLists.txt  README.md  build.sh
inc/: json.h
inc/tjson/: json.h
src/: json.c  json_parser.y  jsontest.c  lexan.l
test/: test.json
